# file-share

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/file_listing/: mod.rs
src/upload_file/: mod.rs
templates/: listing.html
