[package]
name = "file_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6.2", features = ["actix-server"] }
actix-service = "2.0.2"
actix-web = "4.1.0"
askama = { version = "0.11.1", features = ["with-actix-web", "mime", "mime_guess"] }
askama_actix = "0.13.0"
dotenv = "0.15.0"
futures-core = "0.3.30"
